--- a/dogstyle.css
+++ b/dogstyle.css
@@ -31,11 +31,11 @@ h1 {
     
 }
 
+// Updating Border Color //
 .btn-1 {
     padding: 15px 15px;
     border-radius: 15px;
-    border-color: antiquewhite;
+    border-color: gray;
     background-color: rgb(62, 218, 218);
     padding: 10px 25px;
-    
 }
