--- a/dogstyle.css
+++ b/dogstyle.css
@@ -31,7 +31,7 @@ h1 {
     
 }
 
- Updating Border Color 
+ Updating Border Color 12:50 PM Phil. Time
 .btn-1 {
     padding: 15px 15px;
     border-radius: 15px;
